d.2015/10/21.14_58_40.66.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/Dx.Sdk/Dx10.07aug.Tut/T.dx10.tut.07.aug.cs

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/21.18_14_22.56.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/Dx.Sdk/Dx10.07aug.Tut/T.dx10.tut.07.aug.cs

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/22.17_40_45.60.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/game_tutorials/OpenGL/3DS Animation/Main.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/23.17_26_29.15.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   Doc/Book/vg guide wiki.txt
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/23.17_35_36.94.K.MzM.T@WS 
On branch master
Your branch is ahead of 'origin/master' by 1 commit.
  (use "git push" to publish your local commits)

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/10/28.10_25_44.35.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt
