@@ -105,7 +105,7 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-10-23 17:30:03 L.69 '23397 T270049290 .K ~942 +----+----+----+----+----+
+     Zndex_E : //z 2015-10-30 17:56:23 L.62 '21817 T2306678130.K ~955 +----+----+----+----+----+
      TimeCnt : //z 2015-10-20 10:41:58 L.72 '47882 T3912493292.K ~54  +----+----+----+----+----+
      Reg.Cnt : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~37  +----+----+----+----+----+
      #37  R+ : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~37    V+.961  L+.1021 
@@ -149,7 +149,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-10-23 17:30:03 L.69 '23397 T270049290 .K ~979   R+.37   L+.1037 --+----+
+     Version : //z 2015-10-30 17:56:23 L.62 '21817 T2306678130.K ~992   R+.37   L+.1054 --+----+
+     #52  V+ : //z 2015-10-30 17:54:18 L.62 '21942 T2306606228.K ~988   R+.37   L+.1046 
      #51  V+ : //z 2015-10-19 15:59:14 L.73 '28846 T154138778 .K ~969   R+.37   L+.1027 
      #50  R+ : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~961   R+.37   L+.1022 V+.961  
      #50  V+ : //z 2015-10-14 15:40:13 L.78 '29987 T4108589834.K ~950   R+.36   L+.1006 
@@ -1036,4 +1037,19 @@ opengl 例子
 http://ogldev.atspace.co.uk/index.html
 此例 assimp 动画
 http://ogldev.atspace.co.uk/www/tutorial38/tutorial38.html
+
+shader
+http://www.zhihu.com/question/24114911#
+学习dx
+http://www.zhihu.com/question/23713648
+Nehe OpenGL 教程
+http://www.zhihu.com/question/24162747#
+http://www.kevinbeason.com/smallpt/
+图形学好书
+http://www.zhihu.com/question/27525631
+
+http://www.scratchapixel.com/
+
+如果不是大牛，知乎上有关图形学的问题基本上看Milo Yip就足够了，水平高，热于且善于分享。我仔细看过的图形学书籍（系统的学习计算机图形学，有哪些不同阶段的书籍的推荐？ - Milo Yip 的回答中列的书或多或少都看过）中，感觉基础阶段最好的是《Fundamentals of Computer Graphics, Third Edition (豆瓣)》，实践的话《Interactive Computer Graphics: A Top-Down Approach with OpenGL》也不错。RTR仔细通读前四章，后面的一边实践一边慢慢读
+
 #endregion //z 2015-10-19 15:53:24 L.73 '29196 BG57IV3@XCL T153923189 .K.F4146951713-+----+----+
